src/objects/Milestone1_Status_Report__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agenda_Topics__c</fullName>
        <label>Agenda Topics</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Changes_Required__c</fullName>
        <label>Changes Required</label>
        <picklist>
            <picklistValues>
                <fullName>Scope Change Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable Scope Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Objective Changes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_Release_Goals__c</fullName>
        <label>Changes to Release Goals</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Changes_to_Release_Strategy__c</fullName>
        <label>Changes to Release Strategy</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commitment_Level__c</fullName>
        <inlineHelpText>If the status is created from a Project, then this is the Commitment Level from the Project page.
If the status is created from an Iteration, then this the Commitment Level from the Iteration page.</inlineHelpText>
        <label>Commitment Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Comments__c</fullName>
        <label>Cost Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Issues__c</fullName>
        <label>Cost Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Making Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing / Resource Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Factors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cost_Status__c</fullName>
        <label>Cost Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <inlineHelpText>If the status is created from a Project, then this is the Go-Live Date from the Project page.
If the status is created from an Iteration, then this is the Planned Finish Date from the Iteration page.</inlineHelpText>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impediments__c</fullName>
        <label>Impediments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Team_Moving_Right_Direction__c</fullName>
        <label>Is Team Moving Right Direction?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iteration</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>Status_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendees__c</fullName>
        <label>Meeting Attendees</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Time__c</fullName>
        <label>Meeting End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Invitees__c</fullName>
        <label>Meeting Invitees</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <label>Meeting Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Minutes_del__c</fullName>
        <label>Meeting Minutes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Name__c</fullName>
        <label>Meeting Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Purpose__c</fullName>
        <label>Meeting Purpose</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Time__c</fullName>
        <label>Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Topics__c</fullName>
        <label>Meeting Topic(s)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan_Tomorrow__c</fullName>
        <label>Plan Tomorrow</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <formula>TEXT(Project__r.Phase__c)</formula>
        <inlineHelpText>The current phase this project is in. Typically used for waterfall projects.</inlineHelpText>
        <label>Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>Status_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Comments__c</fullName>
        <label>Schedule Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <label>Schedule Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Variance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Variance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Comments__c</fullName>
        <label>Scope Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Status__c</fullName>
        <label>Scope Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Variance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant Variance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Feedback__c</fullName>
        <label>Stakeholder Feedback</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Report_Update__c</fullName>
        <label>Status Report Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tele_Web_Conferencing_Info__c</fullName>
        <label>Tele/Web Conferencing Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_didnt_work_well__c</fullName>
        <label>What didn&apos;t work well?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_to_improve_in_next_sprint__c</fullName>
        <label>What to improve in next sprint?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_went_well__c</fullName>
        <label>What went well?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>Status_Report_Update__c</columns>
        <columns>Report_Date__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Scope_Status__c</columns>
        <columns>Cost_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Status Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>